--- a/css/styles.css
+++ b/css/styles.css
@@ -52,4 +52,73 @@ body {
   transform: translateY(8px);
   transition: 0.5s;
   box-shadow: 0 -8px 0 #333;
+}
+.navegation ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+.navegation ul li {
+  list-style: none;
+  position: relative;
+  width: 100%;
+  height: 60px;
+  padding: 0 10px;
+  transition: 0.5s;
+}
+.navegation ul li.active {
+  transform: translateX(30px);
+}
+.navegation ul li.active a .icon {
+  color: #fff;
+  background: var(--clr);
+}
+.navegation ul li.active a .icon::before {
+  opacity: 0.5;
+}
+.navegation ul li.active a .text {
+  color: var(--clr);
+}
+.navegation ul li a {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  text-decoration: none;
+}
+.navegation ul li a .icon {
+  position: relative;
+  display: block;
+  min-width: 55px;
+  height: 55px;
+  line-height: 60px;
+  transition: 0.5s;
+  border-radius: 10px;
+  font-size: 1.75em;
+  color: #222;
+}
+.navegation ul li a .icon::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--clr);
+  filter: blur(8px);
+  opacity: 0;
+  transition: 0.5s;
+}
+.navegation ul li a .text {
+  position: relative;
+  padding: 0 15px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  color: #333;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
 }/*# sourceMappingURL=styles.css.map */
