--- a/css/styles.scss
+++ b/css/styles.scss
@@ -51,4 +51,76 @@ body{
             box-shadow: 0 -8px 0 #333;
         }
     }
+    ul{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        li{
+            list-style: none;
+            position: relative;
+            width: 100%;
+            height: 60px;
+            padding: 0 10px;
+            transition: 0.5s;
+            &.active{
+                transform: translateX(30px);
+                a{
+                    .icon{
+                        color: #fff;
+                        background: var(--clr);
+                        &::before{
+                            opacity: 0.5;
+                        }
+                    }
+                    .text{
+                        color: var(--clr);
+                    }
+                }
+            }
+            a{
+                position: relative;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                text-align: center;
+                text-decoration: none;
+                .icon{
+                    position: relative;
+                    display: block;
+                    min-width: 55px;
+                    height: 55px;
+                    line-height: 60px;
+                    transition: 0.5s;
+                    border-radius: 10px;
+                    font-size: 1.75em;
+                    color: #222;
+                    &::before{
+                        content: "";
+                        position: absolute;
+                        top: 10px;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: var(--clr);
+                        filter: blur(8px);
+                        opacity: 0;
+                        transition: 0.5s;                        
+                    }
+                }
+                .text{
+                    position: relative;
+                    padding: 0 15px;
+                    height: 60px;
+                    display: flex;
+                    align-items: center;
+                    color: #333;
+                    opacity: 0;
+                    visibility: hidden;
+                    transition: 0.5s;
+                    
+                }
+            }
+        }
+    }
 }
