--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,7 +9,7 @@
 body{
     background-color: #3d4152;
 }
-.navegation{
+.navigation{
     position: fixed;
     inset: 20px 0 20px 20px;
     width: 75px;
